Rewrite most of the imaging scripts